--- a/ReversiAI/ReversiAI.csproj
+++ b/ReversiAI/ReversiAI.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Visualiser.Designer.cs">
       <DependentUpon>Visualiser.cs</DependentUpon>
     </Compile>
-    <Compile Include="Player.cs" />
+    <Compile Include="AI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reversi.cs" />
