Added initial code for Evolutionaryu Algorithm
Started writing code on the EA. I want to optimise both the tile valuation and the general score weights of the existing heuristic, and I want to write a single EA implementation that can do both. Started writing the code top-down, only need to implement specific instances of selection, mutation, crossover. Selection will be tournament, crossover uniform. Have to find a good mutation for real numbers though.

--- a/ReversiAI/ReversiAI.csproj
+++ b/ReversiAI/ReversiAI.csproj
@@ -47,6 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Evolutionary Algorithm\Crossover.cs" />
+    <Compile Include="Evolutionary Algorithm\GeneticAlgorithm.cs" />
+    <Compile Include="Evolutionary Algorithm\Mutatre.cs" />
+    <Compile Include="Evolutionary Algorithm\Selecter.cs" />
     <Compile Include="Visualiser.cs">
       <SubType>Form</SubType>
     </Compile>
