--- a/ReversiAI/ReversiAI.csproj
+++ b/ReversiAI/ReversiAI.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="Evolutionary Algorithm\Crossover.cs" />
     <Compile Include="Evolutionary Algorithm\GeneticAlgorithm.cs" />
-    <Compile Include="Evolutionary Algorithm\Mutatre.cs" />
+    <Compile Include="Evolutionary Algorithm\Mutater.cs" />
     <Compile Include="Evolutionary Algorithm\Selecter.cs" />
     <Compile Include="Visualiser.cs">
       <SubType>Form</SubType>
